--- a/CitySimulator.vcxproj
+++ b/CitySimulator.vcxproj
@@ -145,8 +145,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="application.cpp" />
-    <ClCompile Include="d3d.cpp" />
-    <ClCompile Include="d3d_diagnostics.cpp" />
+    <ClCompile Include="camera.cpp" />
+    <ClCompile Include="cube.cpp" />
+    <ClCompile Include="direct3d.cpp" />
+    <ClCompile Include="constant_buffer.cpp" />
+    <ClCompile Include="diagnostics.cpp" />
+    <ClCompile Include="drawable.cpp" />
+    <ClCompile Include="global_device_info.cpp" />
+    <ClCompile Include="shader.cpp" />
+    <ClCompile Include="texture.cpp" />
+    <ClCompile Include="vertex_buffer.cpp" />
+    <ClCompile Include="external\WICTextureLoader.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="mouse.cpp" />
     <ClCompile Include="timing.cpp" />
@@ -156,14 +165,43 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="application.h" />
+    <ClInclude Include="camera.h" />
     <ClInclude Include="common.h" />
-    <ClInclude Include="d3d.h" />
-    <ClInclude Include="d3d_diagnostics.h" />
+    <ClInclude Include="cube.h" />
+    <ClInclude Include="direct3d.h" />
+    <ClInclude Include="constant_buffer.h" />
+    <ClInclude Include="diagnostics.h" />
+    <ClInclude Include="drawable.h" />
+    <ClInclude Include="global_device_info.h" />
+    <ClInclude Include="shader.h" />
+    <ClInclude Include="texture.h" />
+    <ClInclude Include="vertex_buffer.h" />
+    <ClInclude Include="external\SpriteBatch.h" />
+    <ClInclude Include="external\SpriteFont.h" />
+    <ClInclude Include="external\WICTextureLoader.h" />
     <ClInclude Include="keyboard.h" />
     <ClInclude Include="mouse.h" />
     <ClInclude Include="timing.h" />
     <ClInclude Include="window.h" />
     <ClInclude Include="winprocedure.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="cube_ps.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
+    <FxCompile Include="cube_vs.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+      <ObjectFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)%(Filename).cso</ObjectFileOutput>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
