--- a/CitySimulator.vcxproj
+++ b/CitySimulator.vcxproj
@@ -162,6 +162,7 @@
     <ClCompile Include="mouse_picker.cpp" />
     <ClCompile Include="shader.cpp" />
     <ClCompile Include="texture.cpp" />
+    <ClCompile Include="threading.cpp" />
     <ClCompile Include="user_interface.cpp" />
     <ClCompile Include="vertex_buffer.cpp" />
     <ClCompile Include="external\WICTextureLoader.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="mouse_picker.h" />
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture.h" />
+    <ClInclude Include="threading.h" />
     <ClInclude Include="user_interface.h" />
     <ClInclude Include="vertex_buffer.h" />
     <ClInclude Include="external\SpriteBatch.h" />
