--- a/CitySimulator.vcxproj
+++ b/CitySimulator.vcxproj
@@ -155,8 +155,11 @@
     <ClCompile Include="constant_buffer.cpp" />
     <ClCompile Include="diagnostics.cpp" />
     <ClCompile Include="drawable.cpp" />
+    <ClCompile Include="entity.cpp" />
+    <ClCompile Include="entity_manager.cpp" />
     <ClCompile Include="global_data_collector.cpp" />
     <ClCompile Include="global_device_info.cpp" />
+    <ClCompile Include="object.cpp" />
     <ClCompile Include="persistence.cpp" />
     <ClCompile Include="terrain.cpp" />
     <ClCompile Include="line.cpp" />
@@ -165,6 +168,7 @@
     <ClCompile Include="texture.cpp" />
     <ClCompile Include="threading.cpp" />
     <ClCompile Include="user_interface.cpp" />
+    <ClCompile Include="vehicle.cpp" />
     <ClCompile Include="vertex_buffer.cpp" />
     <ClCompile Include="external\WICTextureLoader.cpp" />
     <ClCompile Include="keyboard.cpp" />
@@ -184,9 +188,13 @@
     <ClInclude Include="constant_buffer.h" />
     <ClInclude Include="diagnostics.h" />
     <ClInclude Include="drawable.h" />
+    <ClInclude Include="entity.h" />
+    <ClInclude Include="entity_manager.h" />
     <ClInclude Include="external\SimpleMath.h" />
     <ClInclude Include="global_data_collector.h" />
     <ClInclude Include="global_device_info.h" />
+    <ClInclude Include="math.h" />
+    <ClInclude Include="object.h" />
     <ClInclude Include="persistence.h" />
     <ClInclude Include="terrain.h" />
     <ClInclude Include="line.h" />
@@ -194,7 +202,9 @@
     <ClInclude Include="shader.h" />
     <ClInclude Include="texture.h" />
     <ClInclude Include="threading.h" />
+    <ClInclude Include="types.h" />
     <ClInclude Include="user_interface.h" />
+    <ClInclude Include="vehicle.h" />
     <ClInclude Include="vertex_buffer.h" />
     <ClInclude Include="external\SpriteBatch.h" />
     <ClInclude Include="external\SpriteFont.h" />
